--- a/package.json
+++ b/package.json
@@ -9,19 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.9.1",
+    "@types/react-date-range": "^1.4.9",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "date-fns": "^3.3.1",
+    "i": "^0.3.7",
+    "joi": "^17.12.1",
+    "mapbox-gl": "^3.1.2",
+    "next": "14.1.0",
+    "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.20.0",
+    "npm": "^10.4.0",
+    "prisma": "^5.9.1",
+    "query-string": "^8.2.0",
     "react": "^18",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
+    "react-map-gl": "^7.1.7",
+    "react-toastify": "^10.0.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/parser": "^5.0.1",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^4.4.4"
   }
 }
